style.css
/*import font 'Manrope'*/
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');

/*----------------------CSS RESET------------------------ */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}


/*----------------------CUSTOM VARIABLES------------------------ */
:root{

--very-dark-grayish-blue: hsl(217, 19%, 35%);
--desaturated-dark-blue: hsl(214, 17%, 51%);
--grayish-blue: hsl(212, 23%, 69%);
--light-grayish-blue: hsl(210, 46%, 95%);
}

/*----------------------GENERAL STYLES------------------------ */

body{
  height: 100vh; /*need to put a height on body otherwise there is some whitespace*/
 
  font-family: "Manrope", sans-serif;
 
  
}
img:not(.card_image){
  /*targets all image elements(avatar img  + share svg) except the one with the class card_image  */
 max-inline-size: 100%; 
  display: block;
}

.card_image{
  inline-size: 100%;/*without this the card image does not fill up the left section(there is some whitespace) */
  display: block;
} 

.share-icon-2,.share-icon{
  cursor: pointer;
}

/*----------------------MAIN CONTAINER STYLES---------------------- */
main.container{
  min-height: 100%; /*important min-height make sure the card doesnt overflow outside of this container */
  padding: 1em 2em;
  background-color: var(--light-grayish-blue);
  border: 8px solid black;

  /*center the card */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/*---------------------CARD SECTIONM----------------------------- */
.card{
  
  background-color: white;

  /* make sure the top bottom  left/right have rounded corners
   this property should have the same vaue for the card_image and text-section
  */
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius:10px;
  border-bottom-right-radius: 10px;
}

/*------------------------IMAGE SECTION(TOP or LEFT)-------------------------- */

.card_image{
   /* make sure the top and bottom left/right have rounded corners */
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}


/*-------------------------TEXT SECTION(BOTTOM or RIGHT)-------------------------- */
.card__text-section-avatar-share{
  background-color: white; /*can remove this because i added white bg to the card (see line:48-50) */
  
  /* make sure the bottom  left/right have rounded corners */
  border-bottom-left-radius:10px;
  border-bottom-right-radius: 10px;
}
.card__text-section-avatar-share{
  /*everything inside this section will have some margin  
  but the div with the class hidden-mobile should be touching left-right bottom edge, so this rule will be overwritten via
  setting negative margin and using !important but only for the hidden-mobile  */
  margin: 1.5em; 
 

}

.text-section_title{
  margin-block-start:0.55rem; /*the h1 title has a bit more margin top */
 
  font-size:clamp(1.17rem,0.75rem + 1.5vw, 2rem) ; /* font-size wont go below ~18px and will scale based on screen size */
  font-weight: 700;
  color: var(--very-dark-grayish-blue);
}
.text-section_paragraph{
  margin-block-start:1.25rem; /*create space between paragraph and h1 title  */
  margin-block-end:1.25rem; /*create space between paragraph and content below it  */

  /*at 799px right before first media query br i want the font-size to be around 16px
  but when the screen size is smaller like 320px i want font-size to be ~13px
  */
  font-size:clamp(0.81rem, 0.65rem + 1vw ,1rem); 
  
  
  line-height: 1.5;
  color: var(--desaturated-dark-blue);
  
}

.card_avatar-p-shareicon-flex-container{
  display: flex;
  align-items: center;
 /*put a gap in order to create some space between profile-picture and the two p ele */
  gap:1em;
}

.paragraph-wrapper p{
  /* same as with the text-section paragraph  small screen size font-size ~13px  bigger screen size 799px font-size:~16px;
  */
  font-size:clamp(0.81rem, 0.65rem + 1vw ,1rem); 
}

.profile-picture{
  border-radius: 50%;
}

.author{
  font-weight: 700;
color: var(--very-dark-grayish-blue);
}
.date{
  color: var(--desaturated-dark-blue);
}

.share-icon-container{
  background-color: var(--light-grayish-blue);
  padding:0.75em;
  border-radius: 50%;

  margin-left:auto; /*push the share icon all the way to the right */
  position: relative;
}
/* layout for desktop these styles should only appear when user has big enough screen */
.wrapper-hidden-desktop-p-img{
  width:250px; /*using px cuz it always needs to be this specific size */
  padding:0.88em;
  
  border-radius: 8px;
  background-color: var(--very-dark-grayish-blue);
  

  position:absolute;
  top: -70px;
  left:-100px;
 

  display: flex;
  justify-content: center;
  gap:1em;
}

.wrapper-hidden-desktop-p-img p{
  /*reduce font of share text*/
  font-size: 0.85rem;
}


/* layout for mobile these styles should only appear when user screen is under 1000px */
.hidden-mobile{
  margin:0 -1.5em -1.5em -1.5em !important; /*this div should take up the full width and have no white space except at the top */
  border-bottom-left-radius:10px ;
  border-bottom-right-radius: 10px;
  padding:2em 0.5em; /*reduce horizontal padding(fixes the issue of the svg image disappearing when screen is small) */
  background-color: var(--very-dark-grayish-blue);
  display: flex;
  justify-content: space-between; /*push share icon all the way to the right and keep the three social icons all the way left*/
  gap:1.5em;
 
}

.upperCase-share-text{
  text-transform: uppercase;
  color: var(--desaturated-dark-blue);
  letter-spacing: 0.51em;
  align-self: center;
}

.wrapper-hidden-mobile-p-img{
  display: flex;
  gap:0.4em;
}

.share-icon-2{
  
  filter: brightness(0) invert(1);
}

.share-icon-2-container{
  background-color: var(--desaturated-dark-blue);
  width: 25px;
  height:25px;

  border-radius: 50%;
  
  /*centers the share svg img inside of its container note:flexbox doesnt center it for some reason */
  align-self: center;
  display: grid;
  place-content: center;
}

.hidden{
  display: none;
}

/* ---------------------------------ATTRIBUTION STY;ES ------------------------------------- */

.attribution {
  margin-top:1rem;
  font-size: 12px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}


/*---------------------MEDIA  QUERIES(FOR LARGER SCREEN)--------------------  */
/*at around 800px the card gets too big so i will limit the width
second media query will be at ~1000px 
*/

@media screen and (min-width:800px){
  main.container{
    background-color:orangered;

    
  }
  .card{
    max-width: 375px; /*stops card from getting too big */
  }

}


@media screen and (min-width:1000px){
  main.container{
    background-color: bisque;
  }
  .card{
    max-width:900px; /*override's previous media query's max-width value of 375px */
    
    /*makes the image go next to the text-section, however without setting max-width on card and height:100% on image 
    the image is way too small */
    display: grid;
    grid-template-columns: 1.5fr 3fr;
   
  }
  
 .card_image{
   height: 100%;
   border-radius:0; /*remove border radius to clear whitespace */
   object-fit:cover; /*The image lost its aspect ration(the vase in particular looks weird without object-fit:cover)
   however setting that property means the image will get clipped in order to maintain the aspect ratio */
  }
 
}

